<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EvahanDatabaseContentProvider</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
     <string name="contact">Vendor Contact</string>
    <string name="ven_id">Vendor Id</string>
    <string name="gps_loc">GPS location</string>
    <string name="license_num">License No</string>
	<string name="servic_typ">Service Type</string>
	<string name="age">Vendor Age</string>
	<string name="email">Email</string>
	<string name="address">Address</string>
	<string name="rating">Vendor Rating</string>
	<string name="num_votes">Number Of Votes</string>
	<string name="loc_name">Location Name</string>
	<string name="vendor_name">Vendor Name</string>
    <string name="submit">SUBMIT</string>
    <string name="delete">DELETE</string>
    <string name="view_button">VIEW</string>
     <string name="get_gps_button">Get GPS</string>
     
     
     
     
     <string name="contact_number_hint">Vendor Contact</string>
    <string name="Id_hint">Vendor Id</string>
    <string name="Latitude_hint">latitude</string>
    <string name="Longitude_hint">longitude</string>
    
    <string name="LicenseNo_hint">License No</string>
	<string name="Service_Type_hint">Service Type</string>
	<string name="age_hint">Vendor Age</string>
	<string name="email_hint">Email</string>
	<string name="address_hint">Address</string>
	<string name="rating_hint">Vendor Rating</string>
	<string name="numvotes_hint">Number Of Votes</string>
	<string name="loc_name_hint">Location Name</string>
	<string name="ven_name_hint">Vendor Name</string>
  

</resources>
