<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<LinearLayout
    android:id="@+id/linLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffccffff"
    android:orientation="vertical"
    android:paddingTop="10dp" >
        
        <LinearLayout
        android:id="@+id/linLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/contact" />
          
          <EditText
	        android:id="@+id/contact_num"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/contact_number_hint"/>
        
        </LinearLayout>
        
         <LinearLayout
        android:id="@+id/linLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/ven_id"  />
          
          <EditText
	        android:id="@+id/vendor_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/Id_hint"/>
        
        </LinearLayout>
        
          <LinearLayout
        android:id="@+id/linLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/gps_loc"  />
          
          <EditText
	        android:id="@+id/gps_latitude"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/Latitude_hint"/>
          <EditText
	        android:id="@+id/gps_longitude"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/Longitude_hint"/>
        
        </LinearLayout>
        
          
           <LinearLayout
        android:id="@+id/linLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/license_num" />
          
          <EditText
	        android:id="@+id/license_no"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/LicenseNo_hint"/>
        
        </LinearLayout>
        
           
            <LinearLayout
        android:id="@+id/linLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/servic_typ"  />
          
          <EditText
	        android:id="@+id/service_type"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/Service_Type_hint"/>
        
        </LinearLayout>
        
            
             <LinearLayout
        android:id="@+id/linLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/age" />
          
          <EditText
	        android:id="@+id/age"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/age_hint"/>
        
        </LinearLayout>
        
             
              <LinearLayout
        android:id="@+id/linLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/email"  />
          
          <EditText
	        android:id="@+id/email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textEmailAddress"
	        android:hint="@string/email_hint"/>
        
        </LinearLayout>
        
              
               <LinearLayout
        android:id="@+id/linLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/address" />
          
          <EditText
	        android:id="@+id/address"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/address_hint"/>
        
        </LinearLayout>
        
               
                <LinearLayout
        android:id="@+id/linLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/rating" />
          
          <EditText
	        android:id="@+id/rating"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/rating_hint"/>
        
        </LinearLayout>
        
                
                 <LinearLayout
        android:id="@+id/linLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/num_votes" />
          
          <EditText
	        android:id="@+id/num_votes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/numvotes_hint"/>
        
        </LinearLayout>
        
                  <LinearLayout
        android:id="@+id/linLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/loc_name" />
          
          <EditText
	        android:id="@+id/loc_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/loc_name_hint"/>
        
        </LinearLayout>
        
                   <LinearLayout
        android:id="@+id/linLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
          <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/vendor_name" />
          
          <EditText
	        android:id="@+id/vendor_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/ven_name_hint"/>
        
        </LinearLayout>
        
                    <LinearLayout
        android:id="@+id/linLayout14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffccffff"
        android:orientation="horizontal" >
        
           <Button
	        android:id="@+id/submit_button"
	        android:layout_width="96dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true"
	        android:text="@string/submit" />
          
            <Button
	        android:id="@+id/cancel_button"
	        android:layout_width="96dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_toRightOf="@+id/submit_button"
	         android:layout_toEndOf="@+id/submit_button"
	        android:text="@string/delete" />
        
    
           <Button
	        android:id="@+id/view_button"
	        android:layout_width="96dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_toRightOf="@+id/cancel_button"
	        android:layout_toEndOf="@+id/cancel_button"
	        android:text="@string/view_button" />
           <Button
	        android:id="@+id/get_gps_button"
	        android:layout_width="96dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_toRightOf="@+id/view_button"
	        android:layout_toEndOf="@+id/view_button"
	        android:text="@string/get_gps_button" />
          
        
        </LinearLayout>

 </LinearLayout>
 </ScrollView>
